# DepLens

./: README.md  pyproject.toml
dep_lens/: analyzer.py  cli.py  detector.py  dot_generator.py  output.py
dep_lens/parsers/: __init__.py  base.py  nodejs.py  python.py  rust.py
