[project]
name = "dep-lens"
version = "0.1.0"
description = "A powerful dependency analyzer for Node.js, Python, and Rust projects"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "colorama>=0.4.6",
    "networkx>=3.0",
    "jsonschema>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
deplens = "dep_lens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dep_lens"]
